--- a/_posts/w3challs/2023-07-12-rsa.md
+++ b/_posts/w3challs/2023-07-12-rsa.md
@@ -3,7 +3,7 @@ title: RSA
 author: thanguyen165
 date: 2023-07-12 07:00:00 +0700
 categories: [Practice, w3challs]
-tags: [Cryptography, w3challs]
+tags: [Cryptography, RSA]
 ---
 
 * Points: 8
